# bloqade-lanes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  index.html  justfile  pyproject.toml  versions.json
.github/workflows/: ci.yml  lint.yml  release.yml
crates/bloqade-lanes-bytecode-cli/: Cargo.toml  bloqade_lanes_bytecode.h  build.rs  cbindgen.toml
crates/bloqade-lanes-bytecode-cli/src/: lib.rs  main.rs
crates/bloqade-lanes-bytecode-cli/src/ffi/: arch.rs  error.rs  handles.rs  memory.rs  mod.rs  program.rs  validate.rs
crates/bloqade-lanes-bytecode-cli/tests/: c_api.rs  cli_integration.rs
crates/bloqade-lanes-bytecode-core/: Cargo.toml
crates/bloqade-lanes-bytecode-core/src/: atom_state.rs  lib.rs  version.rs
crates/bloqade-lanes-bytecode-core/src/arch/: addr.rs  mod.rs  query.rs  types.rs  validate.rs
crates/bloqade-lanes-bytecode-core/src/bytecode/: encode.rs  instruction.rs  mod.rs  opcode.rs  program.rs  text.rs  validate.rs  value.rs
crates/bloqade-lanes-bytecode-python/: Cargo.toml
crates/bloqade-lanes-bytecode-python/src/: arch_python.rs  atom_state_python.rs  errors.rs  instruction_python.rs  lib.rs  program_python.rs  validation.rs
demo/: cudaq_demo.py  msd.py  pipeline_demo.py  pipeline_details.py  simulator_device_demo.ipynb  simulator_device_demo.py
dev/: 404.html  index.html  print.html  searchindex.js  searchindex.json
dev/api/: crates.js  help.html  settings.html  src-files.js
dev/api/bloqade_bytecode/: all.html  enum.ArchCommand.html  enum.Command.html  fn.cmd_assemble.html  fn.cmd_disassemble.html  fn.cmd_show_arch_spec.html  fn.cmd_validate.html  fn.cmd_validate_arch_spec.html  fn.load_program.html  fn.main.html  fn.print_arch_spec.html  index.html  sidebar-items.js  struct.Cli.html
dev/api/bloqade_lanes_bytecode/: all.html  index.html
dev/api/bloqade_lanes_bytecode/ffi/: index.html  sidebar-items.js
dev/api/bloqade_lanes_bytecode_core/: all.html  index.html  sidebar-items.js
dev/api/bloqade_lanes_bytecode_core/arch/: index.html  sidebar-items.js
dev/api/bloqade_lanes_bytecode_core/atom_state/: index.html  sidebar-items.js  struct.AtomStateData.html
dev/api/bloqade_lanes_bytecode_core/bytecode/: index.html  sidebar-items.js
dev/api/bloqade_lanes_bytecode_core/version/: index.html  (+1 more)
dev/api/search.index/: 00ba18bf13ec.js  03d06e943f5c.js  03ffa2d2b64c.js  0552049d44ac.js  089889d299dd.js  08e826d219f7.js  0bf68d42fa61.js  0bf929c78ed0.js  0ce69a8e7122.js  0cfc9c063a2b.js  10f930fda6bd.js  12010fb82433.js  168c6ec9cf1a.js  192ebcc246ea.js  19b6edaa3986.js  1b7def052bcf.js  1bdb11187455.js  1e288c72202c.js  216443cbc6e1.js  216d3da3a25b.js  22b4a203550c.js  267ad19f6c87.js  26fde46ad1ba.js  27839229ed44.js  2d177c1d8043.js  2dda5528f2b6.js  2e32414646ef.js  2f6451602208.js  3149a006cf32.js  33ad945d0cf0.js  358b21f7dfa5.js  4067343fe347.js  4149ef0058cb.js  42b57218e67a.js  43d171c953e7.js  449d1e8c34c6.js  4531a951be17.js  46137f17d706.js  471381ab56b1.js  475a87e6cd78.js  (+32 more)
dev/arch/: archspec-schema.json  archspec.html
dev/bytecode/: inst-spec.html
dev/docs/theme/: version-switcher.css  version-switcher.js
docs/arch/: archspec-schema.json  archspec.md
examples/arch/: full.json  gemini-logical.json  simple.json
examples/programs/invalid/: addr_invalid_bus.sst  addr_invalid_site.sst  addr_invalid_word.sst  addr_invalid_zone.sst  group_inconsistent_bus.sst  group_inconsistent_dir.sst  group_not_rectangle.sst  group_site_not_in_bus_list.sst  group_word_not_in_bus_list.sst  kitchen_sink.sst  stack_initial_fill_not_first.sst  stack_move_wrong_type.sst  stack_type_mismatch_cz.sst  stack_type_mismatch_fill.sst  stack_underflow.sst
examples/programs/valid/: addr_lanes_site_bus.sst  addr_lanes_word_bus.sst  addr_locations.sst  addr_zone.sst  group_consistent_site_bus.sst  group_consistent_word_bus.sst  group_rectangle.sst  stack_basic.sst  stack_full_pipeline.sst
python/bloqade/lanes/: __init__.py  _prelude.py  compile.py  device.py  logical_mvp.py  metrics.py  noise_model.py  prelude.py  steane_defaults.py  transform.py  types.py  upstream.py  utils.py
python/tests/: test_compile_api_split.py  test_cudaq_integration.py  test_device.py  test_integration.py
python/tests/bytecode/: test_arch_spec.py  test_bytecode.py  test_clib_path.py  test_eq_hash.py
python/tests/heuristics/: test_fixed.py  test_physical_initial_layout.py  test_physical_layout_backend_adapter.py  test_variable_word_size.py
python/tests/layout/: test_arch.py  test_arch_extra.py  test_encoding.py  test_metrics.py  test_path.py
python/tests/rewrite/: test_circuit2place.py  test_place2move.py  test_state.py  test_transversal.py
python/tests/search/: test_configuration.py  test_goals.py  test_tree.py  test_tree_traversals.py
python/tests/validation/: test_address.py
python/tests/visualize/: test_artist.py  test_artist_stateartist.py  test_debug.py
scripts/: check_header.sh  maturin_with_data.sh  merge_coverage.py  patch_pyproject_data.py  stage_clib.sh  test_c_ffi.sh  test_smoke.sh
src/bloqade/lanes/: cudaq_integration.py  device.py  logical_mvp.py
test/: test_device.py  test_integration.py
test/visualize/: test_app.py  test_artist.py  test_artist_stateartist.py
tests/: arch_spec_integration.rs
tests/c_smoke/: CMakeLists.txt  smoke.c
(+258 files in other folders)
