[package]
name = "bloqade-lanes-bytecode-cli"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_bytecode"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "bloqade-bytecode"
path = "src/main.rs"

[dependencies]
bloqade-lanes-bytecode-core = { path = "../bloqade-lanes-bytecode-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
